tests/fail/invalid_main_method_name.jlite
class myclass {
  Int a;

  Void test() {
    a.hello();
  }
}